BatchExperiments_1.4.3
- Maintenance release. Removed calls to deprecated `default.stringAsFactors()`.

BatchExperiments_1.4.2
- Added support for read-only mode of registries. See ?loadRegistry for more
  information.
- Compability with new versions of testthat, RSQLite and DBI.

BatchExperiments_1.4.1
- Problem and algorithm ids may now contain the dot char (".").
- Fixed a bug in summarizeExperiments where column "repl" was not correctly
  handled in the output
- Added convenience function getExperimentParts()
- findExperiments now optionally supports regular expression matching
- reduceResultsExperiments can now apply a function on jobs with
  missing results if explicitly requested
- fixed a minor bug in summarizeExperiments where a column was not named as
  documented
- updated citation information

BatchExperiments_1.4
- Updated to use RSQLite >=1.0.0
- Argument 'progressbar' added to multiple functions to suppress displaying the
  progress bars.

BatchExperiments_1.3
- Fixed a bad bug in reduceResultsExperiments: This bug was only triggered when argument
  impute.val was used. It could have lead to wrong 'id' column in result data.frame, no
  other data in the result as corrupted.
- Support impute.val in reduceResultsExperimentsParallel.

BatchExperiments_1.2
- Reduced disk i/o in chunks

BatchExperiments_1.1
- New argument 'ids' (job ids) for getProblemIds and getAlgorithmIds
- New argument 'impute.val' for reduceResultsExperiments
- Support for sourcing of files and directories

BatchExperiments_1.0-967:
- fixed a bug regarding addExperiments and reordering of parameters
- print method for designs now contains parameter storage informations

BatchExperiments_1.0-916:
- new helper: getJobInf, reduceResultsExperimentsParallel
- fix for case-insensitive file systems
- documentation fixes
- various smaller fixes

BatchExperiments_1.0-621:
- added missing import for R versions < 2.15.1

BatchExperiments_1.0-607: