@@ -21,8 +21,8 @@ The requested object is loaded from disk.
 }
 \seealso{
 Other get: 
-\code{\link{getAlgorithmIds}()},
 \code{\link{getAlgorithm}()},
+\code{\link{getAlgorithmIds}()},
 \code{\link{getExperimentParts}()},
 \code{\link{getJobs.ExperimentRegistry}()},
 \code{\link{getProblemIds}()}
